refactor: change name for check endpoint
