# api/swagger.json
@@ -7,7 +7,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/auth/check-token": {
+        "/auth/check": {
             "get": {
                 "security": [
                     {
@@ -1766,6 +1766,8 @@
                 "email": {
                     "description": "Email address of the user; must be a valid email format.",
                     "type": "string",
+                    "maxLength": 254,
+                    "minLength": 6,
                     "example": "john_doe@example.com"
                 },
                 "id": {
@@ -1785,6 +1787,8 @@
                 "username": {
                     "description": "Username of the user; must be unique and valid.",
                     "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3,
                     "example": "john_doe"
                 }
             }
@@ -1810,6 +1814,10 @@
                     "description": "Unique identifier for the collection.",
                     "type": "integer",
                     "example": 1
+                },
+                "is_favorite": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "name": {
                     "description": "Name of the collection; required, between 3 and 100 characters.",
@@ -1996,6 +2004,8 @@
                 "email": {
                     "description": "Email address of the user; must be a valid email format.",
                     "type": "string",
+                    "maxLength": 254,
+                    "minLength": 6,
                     "example": "john_doe@example.com"
                 },
                 "id": {
@@ -2010,6 +2020,8 @@
                 "username": {
                     "description": "Username of the user; must be unique and valid.",
                     "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3,
                     "example": "john_doe"
                 }
             }
@@ -2104,6 +2116,10 @@
                 "description": {
                     "type": "string",
                     "example": "This is description"
+                },
+                "is_favorite": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "name": {
                     "type": "string",
